# opengl-api

./: CMakeLists.txt  README.md  main.cpp
include/: camera.h  renderer.h  triangle_renderer.h  window.h
include/opengl_api/: gl_api.h  gl_config.h  gl_utils.h  opengl_api.h
include/opengl_api/buffers/: attribute_properties.h  bindable.h  buffer.h  ebo.h  vao.h  vbo.h
include/opengl_api/programs/: program.h  program_bank.h  shader.h
include/opengl_api/textures/: image.h  texture.h  texture_bank.h
include/renderers/: companion_cube_renderer.h  line.h  renderer.h  triangle_color_renderer.h  triangle_renderer.h  triangle_tex_renderer.h  trihedron_renderer.h
src/: camera.cpp  triangle_renderer.cpp  window.cpp
src/opengl_api/: gl_utils.cpp  opengl_api.cpp
src/opengl_api/buffers/: buffer.cpp  ebo.cpp  vao.cpp  vbo.cpp
src/opengl_api/programs/: program.cpp  program_bank.cpp  shader.cpp
src/opengl_api/textures/: image.cpp  texture.cpp  texture_bank.cpp
src/renderers/: companion_cube_renderer.cpp  line.cpp  triangle_color_renderer.cpp  triangle_renderer.cpp  triangle_tex_renderer.cpp  trihedron_renderer.cpp
src/shaders/: companion.f.glsl  companion.v.glsl  line_shader.f.glsl  line_shader.v.glsl  simple_color.f.glsl  simple_color.v.glsl  simple_mix.f.glsl  simple_mix.v.glsl  simple_tex.f.glsl
test/: test.cpp  test.h
